fix: spacing and list markers in portfolio

--- a/assets/css/portfolio.scss
+++ b/assets/css/portfolio.scss
@@ -20,6 +20,10 @@
     h2 {
       text-align: center;
     }
+
+    li::marker {
+      content: "";
+    }
   }
 
   footer {
